...
                                                        </userDefinedRuntimeAttribute>
                                                        <userDefinedRuntimeAttribute type="boolean" keyPath="layer.masksToBounds" value="YES"/>
                                                    </userDefinedRuntimeAttributes>
                                                </imageView>
                                                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="tH8-e8-V32" userLabel="Like Button">
                                                    <rect key="frame" x="352" y="11" width="42" height="42"/>
                                                    <accessibility key="accessibilityConfiguration" identifier="like button"/>
                                                    <constraints>
                                                        <constraint firstAttribute="height" constant="42" id="cPV-XU-95p"/>
                                                        <constraint firstAttribute="width" constant="42" id="ifa-Dg-SPB"/>
                                                    </constraints>
                                                    <inset key="imageEdgeInsets" minX="0.0" minY="0.0" maxX="2.2250738585072014e-308" maxY="0.0"/>
                                                    <state key="normal" image="Like_button_on"/>
...
                                <connections>
                                    <outlet property="delegate" destination="Rua-zH-N5Y" id="gDK-Mk-p7a"/>
                                </connections>
                            </scrollView>
                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="wa7-75-i5N">
                                <rect key="frame" x="8" y="52" width="48" height="48"/>
                                <accessibility key="accessibilityConfiguration" identifier="nav back button white"/>
                                <constraints>
                                    <constraint firstAttribute="width" constant="48" id="dvd-Li-gLL"/>
                                    <constraint firstAttribute="height" constant="48" id="lT4-bh-LqW"/>
                                </constraints>
                                <inset key="imageEdgeInsets" minX="0.0" minY="0.0" maxX="2.2250738585072014e-308" maxY="0.0"/>
                                <state key="normal" image="button_backward"/>
...
                                    <constraint firstAttribute="height" constant="60" id="p0o-4J-xha"/>
                                    <constraint firstAttribute="width" constant="60" id="zGP-DM-tEB"/>
                                </constraints>
                            </imageView>
                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Rjs-HM-YZ6">
                                <rect key="frame" x="16" y="724" width="382" height="48"/>
                                <accessibility key="accessibilityConfiguration" identifier="Authenticate"/>
                                <constraints>
                                    <constraint firstAttribute="height" constant="48" id="ZKg-Oz-DCf"/>
                                </constraints>
                                <state key="normal" title="Button"/>
                                <buttonConfiguration key="configuration" style="plain" title="Войти">
                                    <backgroundConfiguration key="background">
...
