...

    private let logoutButton: UIButton = {
        let button = UIButton()

        button.tintColor = .red
        button.setImage(UIImage.asset(ImageAsset.exitProfileButton), for: .normal)
        button.accessibilityIdentifier = "logout button"
        return button
    }()

    private let profileNameLabel: UILabel = {
        let label = UILabel()

...
